--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".SplashActivity"
     android:layout_height="match_parent">
 
     <VideoView
         android:id="@+id/vv_splash_screen"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-
 
 </LinearLayout>
