--- a/app/src/main/res/layout/lesson_tempate.xml
+++ b/app/src/main/res/layout/lesson_tempate.xml
@@ -3,6 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -18,7 +19,7 @@
             android:src="@drawable/one"/>
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="175dp"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
             android:gravity="center_vertical"
@@ -28,12 +29,15 @@
                 android:id="@+id/textview_lessonTopic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="20sp"
                 android:text="Lesson Topic" />
 
             <TextView
                 android:id="@+id/textview_lessonLength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:text="Lesson Length" />
 
         </LinearLayout>
