--- a/app/src/main/res/layout/activity_do_lesson.xml
+++ b/app/src/main/res/layout/activity_do_lesson.xml
@@ -15,8 +15,11 @@
         android:id="@+id/textview_lessonTopic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:layout_marginBottom="8dp"
+        android:gravity="center_horizontal"
         android:textColor="@color/white"
         android:textSize="28sp"
         android:text="Lesson Topic" />
@@ -34,9 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:layout_marginBottom="25dp"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:text="Description" />
 
     <Button
@@ -57,7 +62,7 @@
         android:id="@+id/edittext_lessonNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="35dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/ropasans_regular"
         android:textColor="@color/colorPrimary"
@@ -65,7 +70,10 @@
         android:hint="Take notes here:"
         android:textAlignment="viewStart"
         android:gravity="start"
-        android:inputType="textMultiLine"
+        android:inputType="textAutoCorrect
+        |textMultiLine
+        |textCapSentences"
+        android:maxHeight="200dp"
         />
 
     <Button
@@ -79,8 +87,8 @@
     <Button
         android:id="@+id/button_lessonCompleted"
         android:layout_width="140dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="8dp"
         android:text="MARK COMPLETE"/>
 
 
