--- a/app/src/main/res/layout/activity_view_lessons.xml
+++ b/app/src/main/res/layout/activity_view_lessons.xml
@@ -46,7 +46,7 @@
     <ListView
         android:id="@+id/listview_lessons"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="525dp"
         android:layout_gravity="center"
         android:layout_margin="25dp"/>
 
