--- a/app/src/main/res/layout/lesson_tempate.xml
+++ b/app/src/main/res/layout/lesson_tempate.xml
@@ -16,11 +16,12 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="8dp"
+            android:layout_gravity="center_vertical"
             android:src="@drawable/one"/>
 
         <LinearLayout
             android:layout_width="175dp"
-            android:layout_height="match_parent"
+            android:layout_height="75dp"
             android:layout_margin="8dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -29,25 +30,26 @@
                 android:id="@+id/textview_lessonTopic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Lesson Topic"
                 android:textColor="@color/black"
-                android:textSize="20sp"
-                android:text="Lesson Topic" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textview_lessonLength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:text="Lesson Length" />
+                android:text="Lesson Length"
+                android:textColor="@color/black" />
 
         </LinearLayout>
 
         <ImageView
             android:id="@+id/imageview_lessonComplete"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_margin="8dp"
             android:visibility="invisible"
+            android:layout_gravity="center_vertical|right"
             android:src="@drawable/check"/>
 
     </LinearLayout>
