--- a/app/src/main/res/layout/activity_view_lessons.xml
+++ b/app/src/main/res/layout/activity_view_lessons.xml
@@ -13,27 +13,27 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/adventpro_bold"
         android:layout_marginTop="25dp"
         android:gravity="center"
-        android:text="Learning Code"
-        android:textColor="@color/white"
-        android:textSize="28sp"/>
+        android:text="Python for Beginners"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="20sp"
+            android:gravity="center"
             android:text="Force Sequential Progression?"/>
 
         <Switch
