--- a/app/src/main/res/layout/lesson_tempate.xml
+++ b/app/src/main/res/layout/lesson_tempate.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@drawable/rounded_lesson_shape"
+    android:backgroundTint="@color/colorPrimary"
     android:layout_margin="8dp">
 
     <LinearLayout
@@ -21,7 +23,7 @@
 
         <LinearLayout
             android:layout_width="175dp"
-            android:layout_height="75dp"
+            android:layout_height="85dp"
             android:layout_margin="8dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -30,16 +32,20 @@
                 android:id="@+id/textview_lessonTopic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:text="Lesson Topic"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textview_lessonLength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="19sp"
+                android:textColor="@color/black"
+                android:textStyle="italic"
                 android:text="Lesson Length"
-                android:textColor="@color/black" />
+                 />
 
         </LinearLayout>
 
