--- a/app/src/main/res/layout/activity_view_lessons.xml
+++ b/app/src/main/res/layout/activity_view_lessons.xml
@@ -17,13 +17,13 @@
         android:gravity="center"
         android:text="Python for Beginners"
         android:textColor="@color/colorPrimary"
-        android:textSize="32sp"/>
+        android:textSize="32sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="50dp"
         android:orientation="horizontal">
 
@@ -31,23 +31,26 @@
             android:layout_width="240dp"
             android:layout_height="match_parent"
 
-            android:textColor="@color/white"
-            android:textSize="20sp"
             android:gravity="center"
-            android:text="Force Sequential Progression?"/>
+            android:text="Force Sequential Progression?"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <Switch
             android:id="@+id/switch_seqProgress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:trackTint="@color/white"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
     <ListView
         android:id="@+id/listview_lessons"
         android:layout_width="wrap_content"
-        android:layout_height="525dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="25dp"/>
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="25dp"
+        android:dividerHeight="20dp"/>
 
 </LinearLayout>
